--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -58,7 +58,7 @@ body {
     margin: auto;
     padding: 5px;
     border: 2px;
-    height: 200px;
+    height: 150px;
     width: 40%;
 }
 
@@ -74,6 +74,8 @@ body {
 .question {
     font-size: 28px;
     text-align: left;
+    padding: 5px;
+    margin: 10px;
 }
 
 .answerbtn {
@@ -86,6 +88,7 @@ body {
     font-size: larger;
     font-weight: bolder;
     color: white;
+    text-align: left;
 }
 
 .answerbtn:hover {
